fixed layout issues.

--- a/src/styles/_product_details.scss
+++ b/src/styles/_product_details.scss
@@ -7,12 +7,3 @@
     background-color: white;
     padding: 1rem;
 }
-
-.c-thumbnails-container {
-    max-height: 30rem;
-    overflow-y: scroll;
-}
-
-.c-carousel-container {
-
-}
